# drumsheet-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  start_app.sh  test.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: update-openapi.mjs
app/src/: App.tsx  index.css  main.tsx
app/src/api/: client.ts
app/src/components/: Pagination.tsx  SearchBar.tsx  SongTable.tsx  SyncStatus.tsx
app/src/hooks/: useSongsData.ts  useSyncStatus.ts
app/src/pages/: SongDetailPage.tsx
scripts/api/: run_api.py
scripts/db/: init_db.py  sync_db.py
src/: env.py
src/api/: config.py  dependencies.py  main.py
src/api/routes/: admin.py  files.py  songs.py
src/api/schemas/: __init__.py  song.py  sync.py
src/api/services/: sync_jobs.py
src/db/: __init__.py  client.py
src/db/postgres/: __init__.py  app_views.py  base.py  song_audio.py  song_drum_sheet.py  song_master.py  song_source.py
src/db/song_master/: constants.py  manager.py  utils.py
src/db/sync/: __init__.py  runner.py
src/files/: __init__.py  audio.py  drum_sheet.py
