[project]
name = "drumsheet-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 79
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]
